--- a/notebooks/ta_40_master_dataframe.ipynb
+++ b/notebooks/ta_40_master_dataframe.ipynb
@@ -329,6 +329,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a634948",
+   "metadata": {},
+   "source": [
+    "We then want to to know how violent and unstable a region is. We sum up the total number of fatalities and events/conflicts a region has had since 1997 and merge them with our water point and demographic data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "cd040964",
@@ -1087,6 +1095,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b742473c",
+   "metadata": {},
+   "source": [
+    "We choose columns which may potentially be able to help us predict whether a water point is functioning or not. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "233d2459",
@@ -1186,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a8981667",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f312ec08",
    "metadata": {},
    "outputs": [
@@ -1418,7 +1434,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "cea4e6b8",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1469,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "4469bbcd",
    "metadata": {},
    "outputs": [
@@ -1764,12 +1780,12 @@
    "id": "ef734e91",
    "metadata": {},
    "source": [
-    "Median is a better alternative to mean as it is more representative of our dataset."
+    "These graphs show us that the median is a better alternative to mean as it is more representative of our dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "8a12c0aa",
    "metadata": {},
    "outputs": [
@@ -1779,7 +1795,7 @@
        "296645"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,8 +1810,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "435a3b2a",
+   "metadata": {},
+   "source": [
+    "Since we still have missing values we fill missing values with the median of next lowest administrative leel, adm3. We go on until we do not have any more missing values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "cc98ac93",
    "metadata": {},
    "outputs": [
@@ -1805,7 +1829,7 @@
        "208513"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1821,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "3818ec36",
    "metadata": {},
    "outputs": [
@@ -1831,7 +1855,7 @@
        "202309"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "5f9c3356",
    "metadata": {},
    "outputs": [
@@ -1857,7 +1881,7 @@
        "202309"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,8 +1896,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a171a94",
+   "metadata": {},
+   "source": [
+    "We end up inputting the country's median for the few remaining missing values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "9ddc6dcc",
    "metadata": {},
    "outputs": [
@@ -1883,7 +1915,7 @@
        "201935"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,8 +1931,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab79c336",
+   "metadata": {},
+   "source": [
+    "Missing values for fatalities/events essentially mean there were no conflicts or fatalities for that region since 1997. We assume that the conflict dataset we accessed was extensive and included all conflicts since 1997."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "fe697055",
    "metadata": {},
    "outputs": [
@@ -1910,7 +1950,7 @@
        "54335"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1927,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "0085dff5",
    "metadata": {},
    "outputs": [
@@ -1962,8 +2002,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "609b9006",
+   "metadata": {},
+   "source": [
+    "We choose to create a binary column for the installation year. All water points constructed after 2006 are encoded with a 1, and all before are encoded 0. We choose 2006 because it was the [first multi-party election in Uganda for 25 years](http://news.bbc.co.uk/1/hi/world/africa/4750040.stm). We consider this a an important enough turning point to differentiate between water points. As we see on the distribution above, we have a healthy balance of constructions before and after 2006. In addition, water points with missing installation year information are encoded with 0. We assume that if the installation year was unknown, it was probably because it was old (when bookeeping and official records were not as good). We would expect to see that water points constructed after 2006 might be of better quality due to a more democratic government and better technology."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "e99d1fd1",
    "metadata": {},
    "outputs": [
@@ -1975,7 +2023,7 @@
        "Name: install_year, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,8 +2042,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8a41b34",
+   "metadata": {},
+   "source": [
+    "We consider entities from the government, public institutionsa to be a form of \"public\" management. We also include community management as we assume they are, in some way, related to local governments or governance structures. We also assume that they have similar goals and incentives to the more formal government institutions. Religious, health and medical facilities follow the same reasoning. It is interesting to see whether public or private management structures aremore likely to keep a water point functioning: although their goals are different, their incentives might still make them want to keep a water point working."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "d8ca471d",
    "metadata": {},
    "outputs": [
@@ -2007,7 +2063,7 @@
        "Name: management_clean, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2027,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "f24f250d",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2104,7 @@
        "Name: water_source_clean, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,8 +2115,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59112ce3",
+   "metadata": {},
+   "source": [
+    "We create a binary column identifying whether the water point technology is complex or not. We use analysis made by [Ravi & Rogger, 2021](http://www.rsomani.com/uploads/1/1/7/6/117690547/water_points_and_elections.pdf) to make this decision."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "5cf65643",
    "metadata": {},
    "outputs": [
@@ -2072,7 +2136,7 @@
        "Name: water_source_clean, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2091,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "0cc0cb47",
    "metadata": {},
    "outputs": [
@@ -2101,7 +2165,7 @@
        "1030"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "a516748a",
    "metadata": {},
    "outputs": [
@@ -2138,7 +2202,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2150,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "9749e2de",
    "metadata": {},
    "outputs": [],
@@ -2161,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "496cd729",
    "metadata": {},
    "outputs": [
@@ -2233,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "a9ae1d0f",
    "metadata": {},
    "outputs": [
@@ -2256,8 +2320,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d99130f0",
+   "metadata": {},
+   "source": [
+    "Our dataset is now ready for EDA, feature selection and modelling. We have no missing values, no duplicate rows, every column is interpretable and can be modelled."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "61bf670f",
    "metadata": {},
    "outputs": [],
@@ -2268,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "ab056bdb",
    "metadata": {},
    "outputs": [
@@ -2279,7 +2351,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2291,7 +2363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "b2042bec",
    "metadata": {},
    "outputs": [
@@ -2302,7 +2374,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
