--- a/notebooks/ARCHIVED_ta_conflict_water_eda.ipynb
+++ b/notebooks/ARCHIVED_ta_conflict_water_eda.ipynb
@@ -1508,9 +1508,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capstone",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
-   "name": "capstone"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1565,6 +1565,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c6ceada7ab5ee6fcd72b8e8137f72bc53b2192058ef32f401c30586b94eefb2e"
+   }
   }
  },
  "nbformat": 4,
