--- a/notebooks/ta_10_access-water_data.ipynb
+++ b/notebooks/ta_10_access-water_data.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# defining working directory\n",
-    "filepath = '/Users/thomasadler/Desktop/capstone_docs/'"
+    "filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/'"
    ]
   },
   {
@@ -1590,7 +1590,7 @@
    "outputs": [],
    "source": [
     "# export to cleaned dataset to csv\n",
-    "uganda_water_df_clean.to_csv(filepath + 'uganda_water_df_clean.csv')"
+    "uganda_water_df_clean.to_csv(filepath + 'ta_1_uganda_water_df_clean.csv')"
    ]
   },
   {
