--- a/notebooks/ta_20_access_demographic_data.ipynb
+++ b/notebooks/ta_20_access_demographic_data.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# defining working directory\n",
-    "filepath = '/Users/thomasadler/Desktop/capstone_docs/raw_demographic/'"
+    "filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/ta_0_raw_demographic/'"
    ]
   },
   {
@@ -2227,8 +2227,7 @@
    "outputs": [],
    "source": [
     "# export to cleaned dataset to csv\n",
-    "subcounty_demographic_clean.to_csv(\n",
-    "    '/Users/thomasadler/Desktop/capstone_docs/subcounty_demographic_clean.csv')"
+    "subcounty_demographic_clean.to_csv(filepath+'ta_2_subcounty_demographic_clean.csv')"
    ]
   },
   {
