--- a/notebooks/ta_30_access_conflict_data.ipynb
+++ b/notebooks/ta_30_access_conflict_data.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "#defining working directory\n",
-    "filepath = '/Users/thomasadler/Desktop/capstone_docs/'"
+    "filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/'"
    ]
   },
   {
@@ -632,7 +632,7 @@
    "outputs": [],
    "source": [
     "#export to cleaned dataset to csv\n",
-    "uganda_conflict_df.to_csv(filepath + 'uganda_conflict_df_clean.csv')"
+    "uganda_conflict_df.to_csv(filepath + 'ta_3_conflict_df_clean.csv')"
    ]
   },
   {
