--- a/notebooks/ta_40_master_dataframe.ipynb
+++ b/notebooks/ta_40_master_dataframe.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "#defining working directory\n",
-    "filepath = '/Users/thomasadler/Desktop/capstone_docs/'"
+    "filepath = '/Users/thomasadler/Desktop/futristic-platipus/data/'"
    ]
   },
   {
@@ -109,7 +109,7 @@
    ],
    "source": [
     "#water points\n",
-    "water_df=pd.read_csv(filepath + 'uganda_water_df_clean.csv')\n",
+    "water_df=pd.read_csv(filepath + 'ta_1_uganda_water_df_clean.csv')\n",
     "\n",
     "#check\n",
     "water_df.info()"
@@ -159,7 +159,7 @@
    ],
    "source": [
     "#conflict events\n",
-    "conflict_df=pd.read_csv(filepath +'uganda_conflict_df_clean.csv')\n",
+    "conflict_df=pd.read_csv(filepath +'ta_3_conflict_df_clean.csv')\n",
     "\n",
     "#check\n",
     "conflict_df.info()"
@@ -216,7 +216,7 @@
    ],
    "source": [
     "#demographic variables\n",
-    "demographic_df=pd.read_csv(filepath +'subcounty_demographic_clean.csv')\n",
+    "demographic_df=pd.read_csv(filepath +'ta_2_subcounty_demographic_clean.csv')\n",
     "\n",
     "#check\n",
     "demographic_df.info()"
@@ -2794,7 +2794,7 @@
    "outputs": [],
    "source": [
     "# export to cleaned dataset to csv\n",
-    "master_df_clean_final.to_csv(filepath + 'master_df.csv')"
+    "master_df_clean_final.to_csv(filepath + 'ta_4_master_df.csv')"
    ]
   },
   {
