wpdx comparison file

--- a/notebooks/ta_10_access-water_data.ipynb
+++ b/notebooks/ta_10_access-water_data.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "# importing relevant packages\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages.py\n"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages.py"
    ]
   },
   {
@@ -705,6 +705,7 @@
     "\n",
     "for col in num_columns:\n",
     "    float_converter(uganda_water_df_clean, col)\n",
+    "\n",
     "# check\n",
     "uganda_water_df_clean.info()"
    ]
