log reg model run

--- a/notebooks/ta_20_access_demographic_data.ipynb
+++ b/notebooks/ta_20_access_demographic_data.ipynb
@@ -12,24 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "38d861ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing relevant packages\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6e52e579",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import useful functions\n",
-    "%run / Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_02_functions.py"
+    "# importing relevant packages and functions\n",
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_00_packages_functions.py"
    ]
   },
   {
@@ -49,13 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d806984f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# defining working directory\n",
-    "filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/ta_0_raw_demographic/'"
+    "data_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/'\n",
+    "dictionary_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data_dictionary/'"
    ]
   },
   {
@@ -78,13 +68,13 @@
    "source": [
     "# loading our four datasets\n",
     "eastern_df = pd.DataFrame(pd.read_excel(\n",
-    "    f'{filepath}{regions_df[0]}_demographic.xlsx'))\n",
+    "    f'{data_filepath}{regions_df[0]}_demographic.xlsx'))\n",
     "western_df = pd.DataFrame(pd.read_excel(\n",
-    "    f'{filepath}{regions_df[1]}_demographic.xlsx'))\n",
+    "    f'{data_filepath}{regions_df[1]}_demographic.xlsx'))\n",
     "central_df = pd.DataFrame(pd.read_excel(\n",
-    "    f'{filepath}{regions_df[2]}_demographic.xlsx'))\n",
+    "    f'{data_filepath}{regions_df[2]}_demographic.xlsx'))\n",
     "northern_df = pd.DataFrame(pd.read_excel(\n",
-    "    f'{filepath}{regions_df[3]}_demographic.xlsx'))"
+    "    f'{data_filepath}{regions_df[3]}_demographic.xlsx'))"
    ]
   },
   {
@@ -2227,12 +2217,12 @@
    "outputs": [],
    "source": [
     "# export to cleaned dataset to csv\n",
-    "subcounty_demographic_clean.to_csv(filepath+'ta_2_subcounty_demographic_clean.csv')"
+    "subcounty_demographic_clean.to_csv(data_filepath+'ta_2_subcounty_demographic_clean.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "feef5e64",
    "metadata": {},
    "outputs": [
@@ -2243,14 +2233,14 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#data dictionary\n",
-    "Image(\"/Users/thomasadler/Desktop/futuristic-platipus/data_dictionary/2A-Demographic-Dictionary.png\")"
+    "Image(dictionary_filepath+\"2A-Demographic-Dictionary.png\")"
    ]
   }
  ],
