--- a/notebooks/ta_100_wpdx_comparison.ipynb
+++ b/notebooks/ta_100_wpdx_comparison.ipynb
@@ -8,13 +8,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# importing relevant packages\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_01_packages.py"
+    "The Water Point Data Exchange have come up with their own predictor of water point functionality, with a much more limited dataset and using basic ML models. We will see how our own best model stacks up agains theirs. "
    ]
   },
   {
@@ -23,13 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import useful functions\n",
-    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_02_functions.py"
+    "# importing relevant packages and functions\n",
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_00_packages_functions.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +315,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +424,7 @@
        "0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -537,21 +534,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.224805\n",
-       "1    0.255882\n",
-       "2    0.468150\n",
-       "3    0.358532\n",
-       "4    0.160506\n",
+       "97263    0.149669\n",
+       "97264   -0.635958\n",
+       "97265    0.252421\n",
+       "97266    0.149669\n",
+       "97267    0.336192\n",
        "Name: status_prediction, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +558,31 @@
     "wpdx_prediction_df['status_prediction']=wpdx_prediction_df['status_id']-wpdx_prediction_df['prediction']\n",
     "\n",
     "#check\n",
-    "wpdx_prediction_df['status_prediction'].head()"
+    "wpdx_prediction_df['status_prediction'].tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9892203211784363"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#converting to absolute difference\n",
+    "wpdx_prediction_df['status_prediction']=np.where(wpdx_prediction_df['status_prediction']<0, wpdx_prediction_df['status_prediction']*(-1), wpdx_prediction_df['status_prediction'])\n",
+    "\n",
+    "#check\n",
+    "min(wpdx_prediction_df['status_prediction'])"
    ]
   }
  ],
