--- a/notebooks/ta_60_logistic_regression.ipynb
+++ b/notebooks/ta_60_logistic_regression.ipynb
@@ -531,6 +531,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Running optimised model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -700,7 +707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparison and analysis"
+    "# Comparing results"
    ]
   },
   {
@@ -813,277 +820,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualising feature importance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>feature</th>\n",
-       "      <th>coefficient</th>\n",
-       "      <th>positive</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>is_installed_after_2006</td>\n",
-       "      <td>0.541867</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>is_eastern</td>\n",
-       "      <td>0.452281</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>perc_hh_bank_acc</td>\n",
-       "      <td>0.246587</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>is_central</td>\n",
-       "      <td>0.244181</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>is_public_management</td>\n",
-       "      <td>0.243886</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>perc_hh_temp_dwelling</td>\n",
-       "      <td>0.189936</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>is_western</td>\n",
-       "      <td>0.167979</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>is_complex_tech</td>\n",
-       "      <td>0.151310</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>distance_to_primary</td>\n",
-       "      <td>0.088831</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>distance_to_town</td>\n",
-       "      <td>0.068598</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>perc_pop017_both_parents</td>\n",
-       "      <td>0.048002</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>perc_pop017_certificate</td>\n",
-       "      <td>0.047787</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>perc_hh_mosquito_net</td>\n",
-       "      <td>0.041999</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>perc_pop1217_birth</td>\n",
-       "      <td>0.041212</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>distance_to_tertiary</td>\n",
-       "      <td>0.027540</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>distance_to_secondary</td>\n",
-       "      <td>0.017552</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>perc_pop1464_working</td>\n",
-       "      <td>0.009413</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>perc_hh_own_house</td>\n",
-       "      <td>-0.021281</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>total_events_adm4</td>\n",
-       "      <td>-0.023455</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>perc_hh_toilet</td>\n",
-       "      <td>-0.033126</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>perc_pop1017_married</td>\n",
-       "      <td>-0.043039</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>perc_pop2p_disability</td>\n",
-       "      <td>-0.050091</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>perc_hh_head_male</td>\n",
-       "      <td>-0.050575</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>distance_to_city</td>\n",
-       "      <td>-0.066137</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>usage_cap</td>\n",
-       "      <td>-0.067460</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>perc_hh_electricity</td>\n",
-       "      <td>-0.070110</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>lon_deg</td>\n",
-       "      <td>-0.095584</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>lat_deg</td>\n",
-       "      <td>-0.103078</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>staleness_score</td>\n",
-       "      <td>-0.106168</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>perc_pop1318_secondary</td>\n",
-       "      <td>-0.113964</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>perc_local_served</td>\n",
-       "      <td>-0.162249</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>crucialness</td>\n",
-       "      <td>-0.236364</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     feature  coefficient  positive\n",
-       "10   is_installed_after_2006     0.541867      True\n",
-       "30                is_eastern     0.452281      True\n",
-       "25          perc_hh_bank_acc     0.246587      True\n",
-       "29                is_central     0.244181      True\n",
-       "11      is_public_management     0.243886      True\n",
-       "21     perc_hh_temp_dwelling     0.189936      True\n",
-       "31                is_western     0.167979      True\n",
-       "9            is_complex_tech     0.151310      True\n",
-       "2        distance_to_primary     0.088831      True\n",
-       "6           distance_to_town     0.068598      True\n",
-       "16  perc_pop017_both_parents     0.048002      True\n",
-       "15   perc_pop017_certificate     0.047787      True\n",
-       "22      perc_hh_mosquito_net     0.041999      True\n",
-       "19        perc_pop1217_birth     0.041212      True\n",
-       "4       distance_to_tertiary     0.027540      True\n",
-       "3      distance_to_secondary     0.017552      True\n",
-       "20      perc_pop1464_working     0.009413      True\n",
-       "24         perc_hh_own_house    -0.021281     False\n",
-       "27         total_events_adm4    -0.023455     False\n",
-       "23            perc_hh_toilet    -0.033126     False\n",
-       "18      perc_pop1017_married    -0.043039     False\n",
-       "17     perc_pop2p_disability    -0.050091     False\n",
-       "13         perc_hh_head_male    -0.050575     False\n",
-       "5           distance_to_city    -0.066137     False\n",
-       "7                  usage_cap    -0.067460     False\n",
-       "26       perc_hh_electricity    -0.070110     False\n",
-       "1                    lon_deg    -0.095584     False\n",
-       "0                    lat_deg    -0.103078     False\n",
-       "8            staleness_score    -0.106168     False\n",
-       "14    perc_pop1318_secondary    -0.113964     False\n",
-       "28         perc_local_served    -0.162249     False\n",
-       "12               crucialness    -0.236364     False"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_60_logistic_regression.ipynb Cell 46\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_60_logistic_regression.ipynb#ch0000043?line=0'>1</a>\u001b[0m \u001b[39m#what are the most important coefficients for the best model?\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_60_logistic_regression.ipynb#ch0000043?line=1'>2</a>\u001b[0m coefficients\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mDataFrame(data\u001b[39m=\u001b[39mLR_opt\u001b[39m.\u001b[39mcoef_, index\u001b[39m=\u001b[39mX\u001b[39m.\u001b[39mcolumns)\u001b[39m.\u001b[39mreset_index()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_60_logistic_regression.ipynb#ch0000043?line=3'>4</a>\u001b[0m \u001b[39m#rename columns\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_60_logistic_regression.ipynb#ch0000043?line=4'>5</a>\u001b[0m coefficients\u001b[39m.\u001b[39mset_axis([\u001b[39m'\u001b[39m\u001b[39mfeature\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mcoefficient\u001b[39m\u001b[39m'\u001b[39m], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
     "#what are the most important coefficients for the best model?\n",
-    "coefficients=pd.DataFrame(data=LR_opt.coef_, columns=X.columns).T.reset_index()\n",
+    "coefficients=pd.DataFrame(data=LR_opt.coef_, index=X.columns).reset_index()\n",
     "\n",
     "#rename columns\n",
     "coefficients.set_axis(['feature', 'coefficient'], axis=1, inplace=True)\n",
@@ -1144,6 +906,13 @@
     "Health and prosperity metrics have little explanatory power in the functioning of a water point.\n",
     "\n",
     "Finally, points which serve a large percentage of their local population and are very crucial to its neighboring communities increases the probability of that water point not functioning. We can imagine that overuse might be a major cause of this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exporting"
    ]
   },
   {
