--- a/notebooks/ta_60_logistic_regression.ipynb
+++ b/notebooks/ta_60_logistic_regression.ipynb
@@ -544,13 +544,7 @@
    "outputs": [],
    "source": [
     "# scale the data\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "# fit on train set\n",
-    "X_train_res_scaled = scaler.fit_transform(X_train_res)\n",
-    "\n",
-    "# use it to transform test set\n",
-    "X_test_scaled = scaler.transform(X_test)"
+    "X_train_res_scaled, X_test_scaled = scaling(StandardScaler(), X_train_res, X_test)"
    ]
   },
   {
