--- a/notebooks/ta_80_decision_tree.ipynb
+++ b/notebooks/ta_80_decision_tree.ipynb
@@ -679,7 +679,7 @@
     "             ('DT', DecisionTreeClassifier())]\n",
     "\n",
     "# defining distribution of parameters we want to compare\n",
-    "param = [{\"DT__criterion\": ['gini', 'entropy'],\n",
+    "param_dist = [{\"DT__criterion\": ['gini', 'entropy'],\n",
     "'DT__max_depth': max_depth_range,\n",
     "'DT__min_samples_leaf': min_samples_leaf_range,\n",
     " 'reduce_dim__n_components': np.arange(0.5, 0.9, 0.1)},\n",
@@ -690,7 +690,7 @@
     " 'reduce_dim': [None]}]\n",
     "\n",
     "# run cross validation\n",
-    "pipeline_cross_val_random(estimator, param, X_train_res, y_train_res, X_test, y_test)"
+    "pipeline_cross_val_random(estimator, param_dist, X_train_res, y_train_res, X_test, y_test)"
    ]
   },
   {
