--- a/notebooks/ta_90_random_forest.ipynb
+++ b/notebooks/ta_90_random_forest.ipynb
@@ -1216,8 +1216,8 @@
     }
    ],
    "source": [
-    "#export model results\n",
-    "joblib.dump(RF_base, model_filepath+'random_forest_model.sav')"
+    "#export model results-this is very large and cannot be pushed to our git repo\n",
+    "#joblib.dump(RF_base, model_filepath+'random_forest_model.sav')"
    ]
   },
   {
