--- a/notebooks/ta_110_support_vector_machine.ipynb
+++ b/notebooks/ta_110_support_vector_machine.ipynb
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The optimal model has a penalty of 1, using the Rdge regularisation. The penalty added to the cost function is the coefficients squared (Ridge), as opposed to taking their absolute value (Lasso). These hyperparameters is exactly what the default LinearSVC uses. As a result we end up with our baseline model."
+    "The optimal model has a penalty of 0.01, using the Ridge regularisation. The penalty added to the cost function is the coefficients squared (Ridge), as opposed to taking their absolute value (Lasso). This penalty is very small and we expect it not to affect our model too strongly."
    ]
   },
   {
@@ -549,6 +549,13 @@
     "print(f\"Time to fit the model on the training set is {round(time_fit_base, 3)} seconds\")\n",
     "print(f\"Accuracy score for train set is is: {SVC_opt.score(X_train_res_scaled, y_train_res)}\")\n",
     "print(f\"Accuracy score for test set is is:{SVC_opt.score(X_test_scaled, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The accuracy score on the test very slightly increases. Let's see if it improves any of our precision/recall scores. The fitting time is substantially reduced (15x shorter!)."
    ]
   },
   {
@@ -663,6 +670,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Both of the training and test set all perform exactly the same. It seems that our data is not ideal for a linear SVC. Overall accuracy scores are very low."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Comparing results"
    ]
   },
@@ -721,7 +735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ROC curve shows us that the overall performance of our SVM is quite mediocre. Other models perform much better."
+    "As seen above the performance of the baseline and optimised model is the same. We go with the baseline one in the hope that it more generalisable to other datasets."
    ]
   },
   {
