--- a/notebooks/ta_120_adaboost.ipynb
+++ b/notebooks/ta_120_adaboost.ipynb
@@ -432,7 +432,7 @@
    "source": [
     "The learning rate tells the model how quickly it sould adapt to its errors. If the learning rate is high, it will make larger jumps after making an error.\n",
     "\n",
-    "We see that a learning rate of more than 1.5 becomes counterproductive as the accuracy scores fall. This is because if the learning rate is too high, it will jump around after each run and will not settle on a good decision rule."
+    "We see that a learning rate of more than 1.5 becomes counterproductive as the accuracy scores fall. This is because if the learning rate is too high, usually lead to overfitting the training set."
    ]
   },
   {
